# ufc-eda-persistencia

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SPEC.md
src/: main.cpp
src/io/: arg_parser.h  executor.h  file_parser.h  file_writer.h  operacao.h  utils.h
src/persistencia/: abb.h
src/testes/: CMakeLists.txt  abb_test.cpp  file_parser_test.cpp  file_writer_test.cpp
